css overflow fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,7 +131,7 @@ input::placeholder {
   box-shadow: inset 0px 0px 25px 0px rgba(0, 0, 0, 0.1);
 }
 
-.overflow-visible {
+.overflow-visible, .overflow-show {
   overflow: visible;
 }
 
